fix: socials bar layout breaks in small screensizes

--- a/pages/index/SocialsBar.module.css
+++ b/pages/index/SocialsBar.module.css
@@ -1,11 +1,12 @@
 #socials {
   width: 100%;
-  height: 64px;
+  min-height: var(--bar-height);
+  padding: 8px var(--bar-height);
   display: flex;
   flex-flow: row wrap;
   align-items: center;
   justify-content: center;
-  gap: 16px;
+  gap: 8px 16px;
   background-color: var(--dark);
 }
 
